--- a/style.css
+++ b/style.css
@@ -1,15 +1,55 @@
 body {
-    background: #cccccc;
-}
 
-h1 {
-    text-align: center;
 } 
 
-P {
+#banner{
+	width: 100%;
+}
+ 
+.principal { 
+	background:#CCCCCC;
+	padding: 30px;
+
+}
+
+.titulo-principal{
+	font-size: 20px;
+}
+   
+.titulo-centralizado {
+   text-align:center
+}
+
+
+p {
     text-align: center;
+}
+
+#missao {
+	font-size: 20px;
 }
 
 em strong {
-    color: red;
+	color: #FF0000;
+}
+
+.itens {
+     font-estyle: italic
+}
+
+beneficios {
+	background: #ffffff;
+    padding: 20px;
+
+}
+
+ul{
+
+display: inline	block;  
+vertical-align: top;
+width: 20%;
+margin-right: 15%
+}
+.imagembeneficios {
+	width: 50%;
 }
